--- a/cloud/requirements.txt
+++ b/cloud/requirements.txt
@@ -5,16 +5,20 @@ certifi==2026.1.4
 charset-normalizer==3.4.4
 idna==3.11
 jmespath==1.0.1
+Levenshtein==0.27.3
 lxml==6.0.2
 numpy==2.2.6
 pandas==2.3.3
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
+python-Levenshtein==0.27.3
 pytz==2025.2
+RapidFuzz==3.14.3
 requests==2.32.5
 s3transfer==0.16.0
 six==1.17.0
 soupsieve==2.8.1
+thefuzz==0.22.1
 typing_extensions==4.15.0
 tzdata==2025.3
 urllib3==2.6.3
